[gd_scene load_steps=4 format=3 uid="uid://chx8drb8dcn4x"]

[ext_resource type="TileSet" uid="uid://c52bn7uag64ou" path="res://assets/environment/env_tiles.tres" id="1_7jqqg"]
[ext_resource type="Script" path="res://src/scenes/dungeon/rooms/room.gd" id="1_e8jgv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s17kn"]
size = Vector2(30, 8)

[node name="MobRoom0" type="Node2D"]
script = ExtResource("1_e8jgv")
has_loot = true

[node name="Environment" type="TileMap" parent="."]
tile_set = ExtResource("1_7jqqg")
format = 2
layer_0/tile_data = PackedInt32Array(-131069, 196608, 0, -65533, 262144, 2, 3, 65536, 2, 65539, 262144, 4, 196610, 327680, 4, 196609, 262144, 5, 196608, 458752, 3, 262143, 393216, 3, 262142, 196608, 5, 262141, 196608, 4, -65539, 196608, 0, -2, 196608, 2, 65534, 262144, 2, 131070, 65536, 3, 196606, 65536, 3, 131069, 196608, 2, 65533, 262144, 2, -3, 262144, 2, -65538, 196608, 0, -65537, 196608, 0, -131072, 196608, 0, -131071, 196608, 0, -131070, 196608, 0, -65534, 65536, 3, 2, 131072, 2, 65538, 0, 5, 131073, 131072, 3, 131072, 131072, 2, 196607, 131072, 2, 196605, 65536, 3, 131071, 131072, 2, 65536, 65536, 3, 0, 131072, 2, 1, 262144, 2, 65535, 196608, 2, -1, 131072, 2, -65536, 262144, 2, -65535, 196608, 2, 65537, 65536, 3, -131068, 196608, 0, -65532, 65536, 3, 4, 131072, 3, 65540, 262144, 4, 65541, 262144, 4, 5, 196608, 2, -65531, 131072, 3, -131067, 196608, 0, -131066, 131072, 0, 262140, 0, 4, 196604, 0, 2, 131068, 0, 3, 65532, 0, 3, -4, 0, 2, -65540, 0, 3, -65530, 65536, 1, 6, 65536, 1, 7, 65536, 1, 8, 65536, 1, -65528, 65536, 1, -65529, 65536, 1, 9, 65536, 1, 65542, 262144, 4, 65543, 262144, 4, 65544, 262144, 4, 65545, 262144, 4, -131065, 131072, 0, -131064, 262144, 2, -131063, 262144, 2, -196601, 0, 3, -262137, 0, 3, 65546, 327680, 4, 10, 327680, 3, -65526, 327680, 3, -131062, 327680, 3, -196598, 327680, 3, -262134, 327680, 3, -65527, 262144, 2, -196599, 262144, 2, -262135, 458752, 3, -262136, 393216, 3, -196600, 262144, 2, 131074, 327680, 3)

[node name="Decoration" type="TileMap" parent="."]
tile_set = ExtResource("1_7jqqg")
format = 2
layer_0/tile_data = PackedInt32Array(131072, 458752, 7, 196607, 524288, 6, 131070, 524288, 6, -65539, 262144, 6, -131066, 327680, 6, -65527, 327680, 6, 65537, 327680, 6, 3, 458752, 7, -65529, 458752, 7, 5, 524288, 6, 6, 524288, 6, -65538, 0, 9, -131065, 0, 9, 196605, 327680, 9)

[node name="Entrance" type="Marker2D" parent="."]
position = Vector2(0, 57)

[node name="Exit" type="Marker2D" parent="."]
position = Vector2(144, -55)

[node name="PlayerDetector" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
position = Vector2(0, 42)
shape = SubResource("RectangleShape2D_s17kn")

[node name="LootSpawns" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="LootSpawns"]
position = Vector2(-25, 7)

[connection signal="body_entered" from="PlayerDetector" to="." method="_on_player_detector_body_entered"]
